--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit
-transformers
-torch
-openai
+streamlit==1.34.0
+transformers==4.40.1
+torch==2.3.0
+sentencepiece==0.1.99
+openai==1.30.1
 requests
-tqdm
-sentencepiece
-
