--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 streamlit==1.34.0
 transformers==4.40.1
 torch==2.7.1
-sentencepiece==0.1.99
-openai==1.30.1
-requests==2.32.4
-tqdm==4.67.1
+youtube-transcript-api==0.4.6
+
