--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.32.2
 transformers==4.40.1
-torch==2.5.1
+torch==2.2.2  # Or any version that's working for you
 youtube-transcript-api==1.0.0
+beautifulsoup4
 
